--- a/social-app/app/today/style.css
+++ b/social-app/app/today/style.css
@@ -1,74 +1,188 @@
-.page-container {
-    font-family: 'Arial', sans-serif;
-    color: #4A4A4A;
+.today-page {
+    background-color: #ffffff;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    width: 100%;
   }
   
-  .header {
-    background-color: #EFEFEF;
-    padding: 10px;
+  .today-page .div-2 {
+    background-color: #ffffff;
+    height: 832px;
+    position: relative;
+    width: 1280px;
+  }
+  
+  .today-page .menu-bar-instance {
+    left: 0 !important;
+    position: absolute !important;
+    top: 0 !important;
+  }
+  
+  .today-page .text-wrapper-2 {
+    color: #c2948a;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    font-size: 64px;
+    font-weight: 600;
+    height: 88px;
+    left: 87px;
+    letter-spacing: 0;
+    line-height: normal;
+    position: absolute;
+    text-align: center;
+    top: 150px;
+  }
+  
+  .today-page .to-do {
+    height: 181px;
+    left: 87px;
+    position: absolute;
+    top: 254px;
+    width: 423px;
+  }
+  
+  .today-page .text-wrapper-3 {
+    color: #c2948a;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    font-size: 36px;
+    font-weight: 550;
+    height: 49px;
+    left: 0;
+    letter-spacing: 0;
+    line-height: normal;
+    position: absolute;
+    text-align: center;
+    top: 0;
+  }
+  
+  .today-page .overlap-2 {
+    height: 118px;
+    left: 0;
+    position: absolute;
+    top: 63px;
+    width: 421px;
+  }
+  
+  .today-page .div-3 {
+    height: 118px;
+    left: 0;
+    position: absolute;
+    top: 0;
+    width: 421px;
+  }
+  
+  .today-page .rectangle {
+    background-color: #d9d9d9;
+    height: 30px;
+    left: 0;
+    position: absolute;
+    top: 0;
+    width: 421px;
+  }
+  
+  .today-page .rectangle-2 {
+    background-color: #d9d9d9;
+    height: 30px;
+    left: 0;
+    position: absolute;
+    top: 44px;
+    width: 421px;
+  }
+  
+  .today-page .rectangle-3 {
+    background-color: #d9d9d9;
+    height: 30px;
+    left: 0;
+    position: absolute;
+    top: 88px;
+    width: 421px;
+  }
+  
+  .today-page .rectangle-4 {
+    background-color: #ffffff;
+    border-radius: 2.5px;
+    height: 16px;
+    left: 10px;
+    position: absolute;
+    top: 7px;
+    width: 16px;
+  }
+  
+  .today-page .rectangle-5 {
+    background-color: #ffffff;
+    border-radius: 2.5px;
+    height: 16px;
+    left: 10px;
+    position: absolute;
+    top: 51px;
+    width: 16px;
+  }
+  
+  .today-page .rectangle-6 {
+    background-color: #ffffff;
+    border-radius: 2.5px;
+    height: 16px;
+    left: 10px;
+    position: absolute;
+    top: 94px;
+    width: 16px;
+  }
+  
+  .today-page .habits {
+    height: 181px;
+    left: 713px;
+    position: absolute;
+    top: 254px;
+    width: 423px;
+  }
+  
+  .today-page .completed {
+    height: 324px;
+    left: 87px;
+    position: absolute;
+    top: 465px;
+    width: 1027px;
+  }
+  
+  .today-page .frame {
+    align-items: flex-start;
+    display: inline-flex;
+    gap: 25px;
+    left: 0;
+    position: absolute;
+    top: 71px;
+  }
+  
+  .today-page .rectangle-7 {
+    background-color: #d9d9d9;
+    height: 253px;
+    position: relative;
+    width: 185px;
+  }
+  
+  .tasks-list {
+    margin-top: 45px;
+  }
+  
+  .task-item {
     display: flex;
     align-items: center;
-    justify-content: start;
-    gap: 20px;
+    margin-bottom: 10px;
+    background-color: #D9D9D9; /* light grey color for the task rectangle */
+    padding: 10px;
+    border-radius: 4px; /* rounded corners for the rectangle */
   }
   
-  .logo {
-    /* Add your logo styles here */
+  .task-checkbox {
+    margin-right: 10px;
   }
   
-  .navigation {
-    display: flex;
-    gap: 10px;
-  }
-  
-  .nav-item {
-    text-decoration: none;
-    color: #4A4A4A;
-  }
-  
-  .nav-item.active {
-    font-weight: bold;
-  }
-  
-  .main-content {
-    padding: 20px;
-  }
-  
-  h1 {
-    color: #28536B;
-    font-size: 2em;
-  }
-  
-  .section {
-    margin-top: 20px;
-  }
-  
-  h2 {
-    color: #717171;
-    font-size: 1.5em;
-  }
-  
-  .task-list {
-    display: flex;
-    flex-direction: column;
-    gap: 10px;
-  }
-  
-  .task {
-    background-color: #D3D3D3;
-    height: 20px;
-    border-radius: 4px;
-  }
-  
-  .completed-tasks {
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    gap: 10px;
-  }
-  
-  .completed {
-    background-color: #D3D3D3;
-    height: 100px;
-    border-radius: 4px;
+  .task-name {
+    color:#C2948A;
+    margin: 0;
+    flex-grow: 1;
+    font-family: "DM Serif Display-Regular", Helvetica;
+    font-size: 18px;
+    font-weight: 500;
   }
   
