--- a/social-app/style.css
+++ b/social-app/style.css
@@ -5,19 +5,8 @@
     justify-content: center;
     width: 100%;
   }
-  
-  .log-in-page .div {
-    background-color: #f6f0ed;
-    width: 1280px;
-    height: 832px;
-    position: relative;
-  }
-  
-  .log-in-page .text-wrapper {
-    /* position: absolute; */
-    height: 66px;
-    top: 193px;
-    /* left: 574px; */
+
+  .log-in-page h1 {
     font-family: Georgia, 'Times New Roman', Times, serif;
     font-weight: 600;
     color: #28536b;
@@ -28,7 +17,14 @@
     line-height: normal;
   }
   
-  .log-in-page .text-wrapper-2 {
+  .log-in-page .div {
+    background-color: #f6f0ed;
+    width: 1280px;
+    height: 832px;
+    position: relative;
+  }
+  
+  .log-in-page .forgot-pw {
     position: absolute;
     height: 19px;
     top: 519px;
@@ -58,8 +54,8 @@
     border-radius: 20px;
   }
   
-  .log-in-page .text-wrapper-3 {
-    position: absolute;
+  .log-in-page .button-text {
+    padding: 14px 0;
     height: 22px;
     top: 12px;
     left: 100px;
@@ -90,20 +86,6 @@
     border-radius: 20px;
   }
   
-  .log-in-page .text-wrapper-4 {
-    position: absolute;
-    height: 22px;
-    top: 12px;
-    left: 95px;
-    font-family: "DM Serif Display-Regular", Helvetica;
-    font-weight: 400;
-    color: #f6f0ed;
-    font-size: 16px;
-    text-align: center;
-    letter-spacing: 0;
-    line-height: normal;
-  }
-  
   .log-in-page .email-box {
     position: absolute;
     width: 241px;
@@ -128,12 +110,12 @@
     padding-left: 10px;
   }
   
-  .log-in-page .image {
+  .log-in-page .logo {
     position: absolute;
     width: 60px;
     height: 59px;
     top: 691px;
-    left: 610px;
+    left: 600px;
     object-fit: cover;
   }
 
@@ -153,7 +135,7 @@
   position: relative;
 }
 
-.today-page .menu-bar {
+.menu-bar {
   position: absolute;
   width: 1280px;
   height: 141px;
@@ -167,7 +149,7 @@
   background-color: #28536b;
 }
 
-.today-page .navbar {
+.navbar {
   display: inline-flex;
   align-items: flex-start;
   gap: 60px;
@@ -176,12 +158,12 @@
   left: 224px;
 }
 
-.menu-bar .navbar a.text-wrapper {
+.navbar a.text-wrapper {
   text-decoration: none;
 }
 
 
-.today-page .text-wrapper {
+.text-wrapper {
   position: relative;
   width: fit-content;
   margin-top: -1px;
@@ -193,7 +175,7 @@
   line-height: normal;
 }
 
-.today-page .image {
+.logo {
   position: absolute;
   width: 78px;
   height: 76px;
@@ -486,20 +468,6 @@
   left: 87px;
 }
 
-.feed-page .text-wrapper {
-  position: absolute;
-  height: 44px;
-  top: 0;
-  left: 0;
-  font-family: "DM Serif Display-Regular", Helvetica;
-  font-weight: 400;
-  color: #c2948a;
-  font-size: 32px;
-  text-align: center;
-  letter-spacing: 0;
-  line-height: normal;
-}
-
 .feed-page .zainab {
   position: absolute;
   width: 1033px;
@@ -636,45 +604,10 @@
   height: 247.53px;
 }
 
-.feed-page .image {
-  position: relative;
-  width: 181px;
-  height: 248.51px;
-}
-
-.feed-page .menu-bar {
-  position: fixed;
-  width: 1280px;
-  height: 141px;
-  top: 0;
-  left: 0;
-}
-
 .feed-page .overlap-group {
   position: relative;
   height: 127px;
   background-color: #28536b;
-}
-
-.feed-page .navbar {
-  display: inline-flex;
-  align-items: flex-start;
-  gap: 60px;
-  position: absolute;
-  top: 49px;
-  left: 224px;
-}
-
-.feed-page .text-wrapper-5 {
-  position: relative;
-  width: fit-content;
-  margin-top: -1px;
-  font-family: "Inter-Bold", Helvetica;
-  font-weight: 700;
-  color: #f6f0ed;
-  font-size: 24px;
-  letter-spacing: 0;
-  line-height: normal;
 }
 
 .feed-page .image-2 {
